<resources>
    <string name="app_name">Rashaka</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_fab_animations">FAB Animation</string>
    <string name="title_activity_toolbar_test">ToolbarTestActivity</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="title_activity_animate_toolbar">Animate Toolbar</string>
    <string name="title_activity_tab_animation">Tabs Animation</string>
    <string name="title_activity_sticky_view">StickyViewActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_swipe_refresh">Swipe Refresh</string>
    <string name="title_activity_mini_drawer">Mini Drawer</string>
    <string name="title_activity_nested_toolbar">Nested Toolbar</string>
    <string name="action_search">Search</string>
    <string name="action_view_module">View</string>
    <string name="title_quick_return">Quick Return</string>
    <string name="title_activity_reveal">Reveal Animation</string>
    <string name="title_activity_reveal_animation">Reveal Animation</string>
    <string name="title_activity_launch_screen">LaunchScreenActivity</string>
    <string name="title_activity_gmail_style">Gmail List</string>
    <string name="title_activity_tabs_header">Header Tabs</string>
    <string name="title_activity_pager">PagerActivity</string>
    <string name="section_format">Page %1$d</string>
    <string name="title_activity_results">resultsActivity</string>
    <string name="bmi">your BMI IS , well done you just need to drop pounds.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="active">Activity Level</string>
    <string name="gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="results">Your BMI is </string>
    <string name="results1">Your Ideal weight should be </string>
    <string name="results2">To reach the ideal weight you chould consume calories/Day </string>

    <string name="spinneractivity">Moderately Active</string>
    <string-array name="activity">
        <item>Lightly Active</item>
        <item>Moderately Active</item>
        <item>Very Active</item>
        <item>Extremely Active</item>

    </string-array>

    <string name="spinnerheight">cm</string>
    <string-array name="height">
        <item>meter</item>
        <item>feet</item>
    </string-array>

    <string name="spinnerweight">kg</string>
    <string-array name="weight">
        <item>kg</item>
        <item>pound</item>

    </string-array>



</resources>
